--- a/xuegao-fmk-generator/pom.xml
+++ b/xuegao-fmk-generator/pom.xml
@@ -38,5 +38,12 @@
             <artifactId>mybatis-plus-generator</artifactId>
             <version>${mybatis-plus-generator.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>2.1.10.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
