--- a/mybatis-generator/pom.xml
+++ b/mybatis-generator/pom.xml
@@ -13,28 +13,33 @@
         <maven.compiler.target>8</maven.compiler.target>
 
         <spring-boot.version>2.1.18.RELEASE</spring-boot.version>
+        <xuegao-framework.version>0.0.3</xuegao-framework.version>
+        <mybatis-plus-generator.version>3.5.3</mybatis-plus-generator.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
 
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.5.3</version>
+            <groupId>com.xuegao</groupId>
+            <artifactId>framework-config</artifactId>
+            <version>${xuegao-framework.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuegao</groupId>
+            <artifactId>framework-util</artifactId>
+            <version>${xuegao-framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xuegao</groupId>
+            <artifactId>framework-mapper</artifactId>
+            <version>${xuegao-framework.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>2.1.10.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
